--- a/CalculatorPro/Cal_View.csproj
+++ b/CalculatorPro/Cal_View.csproj
@@ -67,6 +67,9 @@
     <Compile Include="HisFlyout.xaml.cs">
       <DependentUpon>HisFlyout.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MemFlyout.xaml.cs">
+      <DependentUpon>MemFlyout.xaml</DependentUpon>
+    </Compile>
     <Compile Include="TestDemo\Test.xaml.cs">
       <DependentUpon>Test.xaml</DependentUpon>
     </Compile>
@@ -102,6 +105,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="MemFlyout.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Resources\Style\StyleDictionary.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
