--- a/CalculatorPro/Cal_View.csproj
+++ b/CalculatorPro/Cal_View.csproj
@@ -76,6 +76,9 @@
     <Compile Include="TestDemo\TestUser.xaml.cs">
       <DependentUpon>TestUser.xaml</DependentUpon>
     </Compile>
+    <Compile Include="TestDemo\WindowTest.xaml.cs">
+      <DependentUpon>WindowTest.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Close.cs" />
     <Compile Include="View\FontSizeChange.cs" />
     <Compile Include="View\FrostedGlass.cs" />
@@ -118,6 +121,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TestDemo\TestUser.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TestDemo\WindowTest.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
