--- a/CalculatorPro/Cal_View.csproj
+++ b/CalculatorPro/Cal_View.csproj
@@ -79,6 +79,9 @@
     <Compile Include="TestDemo\WindowTest.xaml.cs">
       <DependentUpon>WindowTest.xaml</DependentUpon>
     </Compile>
+    <Compile Include="HisAndMemDis.xaml.cs">
+      <DependentUpon>HisAndMemDis.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\Close.cs" />
     <Compile Include="View\FontSizeChange.cs" />
     <Compile Include="View\FrostedGlass.cs" />
@@ -125,6 +128,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="TestDemo\WindowTest.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="HisAndMemDis.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
