--- a/Cal_ViewModel/Cal_ViewModel.csproj
+++ b/Cal_ViewModel/Cal_ViewModel.csproj
@@ -45,38 +45,45 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="XamlMVVMInfrastructure">
-      <HintPath>C:\Users\67019\Documents\Tencent Files\670192801\FileRecv\WPFMVVMDemo-master\packages\XamlMVVMInfrastructure.0.1.0\lib\net461\XamlMVVMInfrastructure.dll</HintPath>
+      <HintPath>C:\Users\Administrator\Desktop\WPFMVVMDemo-master\packages\XamlMVVMInfrastructure.0.1.0\lib\net461\XamlMVVMInfrastructure.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalViewModel.cs" />
-    <Compile Include="ClearModel\ClearAll.cs" />
-    <Compile Include="ClearModel\ClearLast.cs" />
-    <Compile Include="ClearModel\ClearPresent.cs" />
-    <Compile Include="ClearModel\IClear.cs" />
-    <Compile Include="ClearModel\MemMc.cs" />
+    <Compile Include="ChangeFactory\ChangeForOperator.cs" />
+    <Compile Include="ChangeFactory\ChangeSign.cs" />
+    <Compile Include="Equals.cs" />
+    <Compile Include="Judge\IJudegForSingle.cs" />
+    <Compile Include="Judge\IJudgeForNumber.cs" />
+    <Compile Include="Judge\IJudgeForOperation.cs" />
+    <Compile Include="Judge\IJudgeForZero.cs" />
+    <Compile Include="NumberFormat\NumberOne2Nine.cs" />
+    <Compile Include="NumberFormat\Point.cs" />
+    <Compile Include="NumberFormat\Zero.cs" />
     <Compile Include="OperatorModel\Addition.cs" />
     <Compile Include="OperatorModel\Devide.cs" />
     <Compile Include="OperatorModel\Evolution.cs" />
-    <Compile Include="OperatorModel\IOperator.cs" />
+    <Compile Include="OperatorModel\IOperation.cs" />
     <Compile Include="OperatorModel\Multiply.cs" />
     <Compile Include="OperatorModel\Percent.cs" />
-    <Compile Include="OperatorModel\Point.cs" />
     <Compile Include="OperatorModel\Subtract.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StoreModel\IStore.cs" />
-    <Compile Include="StoreModel\MemMr.cs" />
-    <Compile Include="StoreModel\MemMs.cs" />
-    <Compile Include="Tools\MyMath.cs" />
-    <Compile Include="Tools\Rouding.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\History_Memory\History_Memory.csproj">
+      <Project>{CC623C91-A33C-41A7-8A63-15F097201F69}</Project>
+      <Name>History_Memory</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MyMathTools\MyMathTools.csproj">
+      <Project>{EA9907E2-136F-4F06-8B24-A3C11AF122AB}</Project>
+      <Name>MyMathTools</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
