--- a/Cal_ViewModel/Cal_ViewModel.csproj
+++ b/Cal_ViewModel/Cal_ViewModel.csproj
@@ -45,30 +45,36 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="XamlMVVMInfrastructure">
-      <HintPath>C:\Users\67019\Documents\Tencent Files\670192801\FileRecv\WPFMVVMDemo-master\packages\XamlMVVMInfrastructure.0.1.0\lib\net461\XamlMVVMInfrastructure.dll</HintPath>
+      <HintPath>D:\BegVCSharp\项目一\XamlMVVMInfrastructure.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CalViewModel.cs" />
-    <Compile Include="ClearModel\ClearAll.cs" />
-    <Compile Include="ClearModel\ClearLast.cs" />
-    <Compile Include="ClearModel\ClearPresent.cs" />
-    <Compile Include="ClearModel\IClear.cs" />
-    <Compile Include="ClearModel\MemMc.cs" />
-    <Compile Include="OperatorModel\Addition.cs" />
-    <Compile Include="OperatorModel\Devide.cs" />
-    <Compile Include="OperatorModel\Evolution.cs" />
-    <Compile Include="OperatorModel\IOperator.cs" />
-    <Compile Include="OperatorModel\Multiply.cs" />
-    <Compile Include="OperatorModel\Percent.cs" />
-    <Compile Include="OperatorModel\Point.cs" />
-    <Compile Include="OperatorModel\Subtract.cs" />
+    <Compile Include="FomatModel\AddCommon.cs" />
+    <Compile Include="FomatModel\AddFormat.cs" />
+    <Compile Include="JudgeModel\Equals.cs" />
+    <Compile Include="JudgeModel\IJudgeForDot.cs" />
+    <Compile Include="JudgeModel\IJudgeForNumber.cs" />
+    <Compile Include="JudgeModel\IJudgeForOperator.cs" />
+    <Compile Include="JudgeModel\IJudgeForSingle.cs" />
+    <Compile Include="JudgeModel\IJudgeForZero.cs" />
+    <Compile Include="NumberModel\Dot.cs" />
+    <Compile Include="NumberModel\NumberOneToNine.cs" />
+    <Compile Include="NumberModel\NumberZero.cs" />
+    <Compile Include="OperatorModel\BasicOperation.cs" />
+    <Compile Include="OperatorModel\ComplexOperation.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StoreModel\IStore.cs" />
-    <Compile Include="StoreModel\MemMr.cs" />
-    <Compile Include="StoreModel\MemMs.cs" />
+    <Compile Include="SaveModel\Cache.cs" />
+    <Compile Include="SaveModel\History.cs" />
+    <Compile Include="SaveModel\IMSChange.cs" />
+    <Compile Include="SaveModel\IMSClear.cs" />
+    <Compile Include="SaveModel\IMSUse.cs" />
+    <Compile Include="SaveModel\Memory.cs" />
     <Compile Include="Tools\MyMath.cs" />
     <Compile Include="Tools\Rouding.cs" />
+    <Compile Include="TypeModel\AddOperator.cs" />
+    <Compile Include="TypeModel\AddSingle.cs" />
+    <Compile Include="TypeModel\AddSymbol.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
@@ -78,5 +84,6 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
