--- a/Cal_ViewModel/Cal_ViewModel.csproj
+++ b/Cal_ViewModel/Cal_ViewModel.csproj
@@ -38,6 +38,7 @@
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,7 +46,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="XamlMVVMInfrastructure">
-      <HintPath>D:\BegVCSharp\项目一\XamlMVVMInfrastructure.dll</HintPath>
+      <HintPath>C:\Users\Administrator\Desktop\04.SourceCode\WPFMVVMDemo-master\packages\XamlMVVMInfrastructure.1.0.0\lib\net461\XamlMVVMInfrastructure.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -70,8 +71,6 @@
     <Compile Include="SaveModel\IMSClear.cs" />
     <Compile Include="SaveModel\IMSUse.cs" />
     <Compile Include="SaveModel\Memory.cs" />
-    <Compile Include="Tools\MyMath.cs" />
-    <Compile Include="Tools\Rouding.cs" />
     <Compile Include="TypeModel\AddOperator.cs" />
     <Compile Include="TypeModel\AddSingle.cs" />
     <Compile Include="TypeModel\AddSymbol.cs" />
@@ -84,6 +83,14 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MyMathTools\MyMathTools.csproj">
+      <Project>{9c9d8de6-15f0-4ad4-934a-11db5f28fcbb}</Project>
+      <Name>MyMathTools</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Tools\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
